# django-todo

./: .gitignore  Makefile  README.md  docker-compose.yml  local.example.env  pyproject.toml
config/: settings.py  urls.py
django-todo/todo/: models.py
docker/django/: DockerFile
docker/traefik/: traefik.toml
todo/: models.py  serializers.py  views.py
todo/migrations/: 0001_initial.py  0002_add_random_todos.py
