[tool.poetry]
name = "django-todo"
version = "0.1.0"
description = "A simple todo app and API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
pendulum = "^3.0.0"

[tool.poetry.group.dev.dependencies]
djangorestframework = "^3.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
